--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest --watch"
   },
   "dependencies": {
     "expo": "~49.0.15",
@@ -17,8 +18,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.4.3",
+    "@types/expo": "^33.0.1",
+    "@types/jest": "^29.5.11",
     "@types/react": "~18.2.14",
-    "typescript": "^5.1.3"
+    "@types/react-native": "^0.73.0",
+    "jest": "^29.7.0",
+    "jest-expo": "^49.0.0",
+    "react-test-renderer": "^18.2.0",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
